package testapp.model.enums;

public enum ChatRole {
    CHAT_ADMIN,
    CHAT_USER
}
