package testapp.model.enums;

public enum ChatType {
    INDIVIDUAL,
    GROUP
}
