package testapp.model.enums;

public enum UserGender {
    MALE,
    FEMALE
}
