package testapp.model.enums;

public enum UserRole {
    ADMIN,
    USER
}
